--- a/src/SingleMovie/SingleMovie.css
+++ b/src/SingleMovie/SingleMovie.css
@@ -55,6 +55,10 @@ article {
     margin: 5vh;
 }
 
+.article-details {
+  margin-top: 100px;
+}
+
 .movie-details {
   display: flex;
   flex-direction: column;
